# usergrow

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  FRONTEND_COMPLETE.md  IMPLEMENTATION.md  README.md
.github/workflows/: ci.yml  deploy.yml  pages.yml
docs/: PITCH.md  README.md  app.js  graph.html  index.html  kg-embed.js  styles.css
ironclaw-engram/: .gitignore  Cargo.toml  IRONCLAW_INTEGRATION.md  LICENSE-MIT  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
ironclaw-engram/examples/: basic_usage.rs
ironclaw-engram/src/: config.rs  lib.rs  memory.rs  storage.rs  types.rs
ironclaw-engram/src/models/: actr.rs  consolidation.rs  ebbinghaus.rs  hebbian.rs  mod.rs
ironclaw-engram/tests/: integration_test.rs
usergrow/: Cargo.toml
usergrow/src/: analysis.rs  brand_dna.rs  engram.rs  knowledge_graph.rs  llm_probe.rs  main.rs  persona.rs  query_gen.rs  reality.rs  report.rs  tavily.rs  types.rs  web.rs
