[package]
name = "usergrow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
ironclaw-engram = { path = "../ironclaw-engram" }
rusqlite = { version = "0.32", features = ["bundled"] }
